--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -32,7 +32,7 @@
         <div class="flex justify-between">
           <div><label for="branch-color" class="font-bold">Color:</label></div>
           <div>
-            <input id="branch-color" class="color" type="color" name="body" value="#80461B" data-action="input->l-systems#update" data-l-systems-target="branchColor"></input>
+            <input id="branch-color" class="bg-gray-800" type="color" name="body" value="#80461B" data-action="input->l-systems#update" data-l-systems-target="branchColor"></input>
           </div>
         </div>
         <div class="flex justify-between">
@@ -68,7 +68,21 @@
         <div class="flex justify-between">
           <div><label for="leaf-color" class="font-bold">Color:</label></div>
           <div>
-            <input id="leaf-color" class="color" type="color" name="body" value="#ffffff" data-action="input->l-systems#update" data-l-systems-target="leafColor"></input>
+            <input id="leaf-color" class="bg-gray-800" type="color" name="body" value="#ffffff" data-action="input->l-systems#update" data-l-systems-target="leafColor"></input>
+          </div>
+        </div>
+        <div class="flex justify-between">
+          <div class="flex gap-1">
+            <div>
+              <input id="leaf-fill-type-colors" type="radio" name="body" value="colors" data-action="input->l-systems#update" data-l-systems-target="leafFillType"></input>
+            </div>
+            <div><label for="leaf-fill-type-colors" class="font-bold">Colors</label></div>
+          </div>
+          <div class="flex gap-1">
+            <div>
+              <input id="leaf-fill-type-rainbow" type="radio" name="body" value="rainbow" data-action="input->l-systems#update" data-l-systems-target="leafFillType"></input>
+            </div>
+            <div><label for="leaf-fill-type-rainbow" class="font-bold">Rainbow</label></div>
           </div>
         </div>
         <div class="flex justify-between">
