--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,6 +3,7 @@
     <div class="m-3">
       <%= render(partial: 'shared/gradient_text', locals: { content: 'L-Systems', classes: 'text-5xl' }) %>
       <button type="button" class="mt-3 text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" data-action="click->l-systems#randomPreset">Random Preset</button>
+      <button type="button" class="mt-3 text-white bg-gradient-to-br from-cyan-500 to-purple-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" data-action="click->l-systems#update">Regenerate</button>
     </div>
 
     <div class="mx-3 mt-6 p-3 drop-shadow rounded text-gray-400 bg-gray-800">
@@ -17,7 +18,7 @@
         <div class="flex justify-between">
           <div><label for="l-system-iterations" class="font-bold">Iterations:</label></div>
           <div>
-            <input id="l-system-iterations" class="bg-gray-200 accent-green-600 rounded-lg appearance-none cursor-pointer dark:bg-gray-700" type="range" min="1" max="7" step="1" data-action="input->l-systems#update" data-l-systems-target="iterations">
+            <input id="l-system-iterations" class="bg-gray-200 accent-green-600 rounded-lg appearance-none cursor-pointer dark:bg-gray-700" type="range" min="1" max="8" step="1" data-action="input->l-systems#update" data-l-systems-target="iterations">
           </div>
         </div>
       </div>
